less/altrugon.less
/*
 * Site's custom style
 *
 * This file will be include into the main.css file from HTML5 Boilerplate
 * under the "Author's custom styles".
 */

/* ==========================================================================
   Variables
   ========================================================================== */

// Colors
// -------------------------
@black:                 #000000;
@grayDarker:            #333333;
@grayDark:              #404040;
@gray:                  #555555;
@grayLight:             #929497;
@orange:                #f05a28;
@redish:                #c3002a;
@white:                 #ffffff;

// Elements
// -------------------------
@middle-top-bg-color:       @grayDark;
@middle-top-border-color:   @orange;
@link-color:                @orange;
@my-links-bg-color:         @grayDark;
@heading-color:             @orange;
@btn-bg-color:              @orange;
@btn-text-color:            @grayDark;
@languages-bg-color:        @white;
@nav-icon-color:            @orange;
@nav-link-hover-color:      @white;
@nav-link-color:            @grayLight;

/* ==========================================================================
   Mixins
   ========================================================================== */
.animation(@name, @duration, @timing-function, @animation-delay, @iteration-count, @direction, @fill-mode) {
  -o-animation: @name, @duration, @timing-function, @animation-delay, @iteration-count, @direction, @fill-mode;
  -webkit-animation: @name, @duration, @timing-function, @animation-delay, @iteration-count, @direction, @fill-mode;
  animation: @name, @duration, @timing-function, @animation-delay, @iteration-count, @direction, @fill-mode;
}

.animation-name(@name) {
  -o-animation-name: @name;
  -webkit-animation-name: @name;
  animation-name: @name;
}

.animation-duration(@duration) {
  -o-animation-duration: @duration;
  -webkit-animation-duration: @duration;
  animation-duration: @duration;
}

.animation-delay(@delay) {
  -o-animation-delay: @delay;
  -webkit-animation-delay: @delay;
  animation-delay: @delay;
}

.animation-fill-mode(@fill-mode) {
  -o-animation-fill-mode: @fill-mode;
  -webkit-animation-fill-mode: @fill-mode;
  animation-fill-mode: @fill-mode;
}

.animation-timing-function(@timing-function) {
  -o-animation-timing-function: @timing-function;
  -webkit-animation-timing-function: @timing-function;
  animation-timing-function: @timing-function;
}

.perspective(@value) {
  -webkit-perspective: @value;
  -o-perspective: @value;
  perspective: @value;
}

.transition(@duration) {
  -webkit-transition: @duration;
  -o-transition: @duration;
  transition: @duration;
}

.transform(@value) {
  -webkit-transform: @value;
  -o-transform: @value;
  transform: @value;
}

.transform-style(@style) {
  -webkit-transform-style: @style;
  -o-transform-style: @style;
  transform-style: @style;
}

.backface-visibility(@value) {
  -webkit-backface-visibility: @value;
  -o-backface-visibility: @value;
  backface-visibility: @value;
}
/* ==========================================================================
   Animations
   ========================================================================== */
@-webkit-keyframes fall {
  40%, 70%, 90%{
     -webkit-animation-timing-function: ease-out;
     -webkit-transform: translate(0px, 0px);
  }
  0% {
     -webkit-transform: translate(0px, -500px);
     -webkit-animation-timing-function:ease-in;
   position: relative;
  }
  55% {
     -webkit-transform: translate(0px, -50px);
     -webkit-animation-timing-function:ease-in;
  }
  80% {
     -webkit-transform: translate(0px, -25px);
     -webkit-animation-timing-function:ease-in;
  }
  95% {
     -webkit-transform: translate(0px, -10px);
     -webkit-animation-timing-function:ease-in;
  }
  100% {
     -webkit-transform: translate(0px, 0px);
     -webkit-animation-timing-function:ease-out;
  }
}

@-moz-keyframes fall {
  40%, 70%, 90%{
     -moz-animation-timing-function: ease-out;
     -moz-transform: translate(0px, 0px);
  }
  0% {
     -moz-transform: translate(0px, -500px);
     -moz-animation-timing-function:ease-in;
     position: relative;
  }
  55% {
     -moz-transform: translate(0px, -50px);
     -moz-animation-timing-function:ease-in;
  }
  80% {
     -moz-transform: translate(0px, -25px);
     -moz-animation-timing-function:ease-in;
  }
  95% {
     -moz-transform: translate(0px, -10px);
     -moz-animation-timing-function:ease-in;
  }
  100% {
     -moz-transform: translate(0px, 0px);
     -moz-animation-timing-function:ease-out;
  }
}

@keyframes fall {
  40%, 70%, 90%{
     animation-timing-function: ease-out;
     transform: translate(0px, 0px);
  }
  0% {
     transform: translate(0px, -500px);
     animation-timing-function:ease-in;
     position: relative;
  }
  55% {
     transform: translate(0px, -50px);
     animation-timing-function:ease-in;
  }
  80% {
     transform: translate(0px, -25px);
     animation-timing-function:ease-in;
  }
  95% {
     transform: translate(0px, -10px);
     animation-timing-function:ease-in;
  }
  100% {
     transform: translate(0px, 0px);
     animation-timing-function:ease-out;
  }
}


/* ==========================================================================
   Bootstrap overrrides
   ========================================================================== */

// override rule >> [class*="span"]
[class*="spanish"] {
  float: none;
  margin-left: 0px;
  min-height: auto;
}


li {
  line-height: 1.3em;
}

p {
  margin-bottom: 1em;
}


/* ==========================================================================
   Site style
   ========================================================================== */
html,
body {
  height: 100%;
}

html.js .no-js { display: none; }

body {
  color: @gray;
  font-family: 'Source Sans Pro', sans-serif;
}

a {
  color: @link-color;
  
  &:hover {
    color: spin(@link-color, -10);
    text-decoration: none;
    transition-duration: .5s;
    transition-property: color;
  }
}

em {
  color: @link-color;
}

#middle-top {
  background: @middle-top-bg-color;
  border-bottom: 6px solid @middle-top-border-color;
  box-shadow: 0px 2px 6px 1px @gray;
  height: 50%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;
}

#main-content {
  height: 820px;
  max-width: 1100px;
  .perspective(1800px);
  overflow: hidden;
  position: relative;
  width: 90%;
  z-index: 2;
}

/* Site's name */
h1 {
  color: @heading-color;
  font-size: 40px;
  line-height: 1.1em;
  margin: 10px 10px 20px 20px;
  padding-right: 100px;
  text-shadow: 0.1em 0.1em 0.2em @grayDarker;
}

/* Site's navigation */
nav {
  position: absolute;
  right: 20px;
  top: 19px;
  z-index: 2;
  
  .btn {
    background: -webkit-linear-gradient(top, darken(@btn-bg-color, 5%), @btn-bg-color); // Safari 5.1+, Chrome 10+
    background: -o-linear-gradient(top, darken(@btn-bg-color, 5%), @btn-bg-color); // Opera 11.10
    background: linear-gradient(to bottom, darken(@btn-bg-color, 5%), @btn-bg-color);
    color: @btn-text-color;
    font-weight: 600;
    padding-left: 0;
    padding-right: 0;
    text-align: left;
    text-shadow: 0 1px 1px rgba(240, 240, 240, 0.75);
    width: 94px;
    
    &.active,
    &:active, {
      background: -webkit-linear-gradient(top, @btn-bg-color, lighten(@btn-bg-color, 10%)); // Safari 5.1+, Chrome 10+
      background: -o-linear-gradient(top, @btn-bg-color, lighten(@btn-bg-color, 10%)); // Opera 11.10
      background: linear-gradient(to bottom, @btn-bg-color, lighten(@btn-bg-color, 10%));
    }
    
    i {
      padding-left: 12px;
    }
  }
}

/* Content section */
#languages {
  height: 100%;
  position: absolute;
  .transition(1s);
  .transform-style(preserve-3d);
  width: 100%;
}

.language {
  .backface-visibility(hidden);
  height: 100%;
  width: 100%;
  overflow: hidden;
  position: absolute;
}

.language-inner {
  background: @languages-bg-color;
  padding: 20px;
}

.front .language-inner {

  > * {
    .animation-name(fall);
    .animation-duration(1500ms);
   // -webkit-animation-fill-mode: forwards;
    .animation-timing-function(ease-in-out);
    bottom: 0;
    left: 0px;
   // position: relative;
  }
 
  ul.icons {
    left: auto;
    bottom: auto;
    position: absolute;
  }
  
  > :nth-child(1) {
    .animation-delay(200ms);
  }
  
  > :nth-child(2) {
    .animation-delay(150ms);
  }
  
  > :nth-child(3) {
    .animation-delay(100ms);
  }
}


ul.icons {
  background: @my-links-bg-color;
  margin-bottom: 1em;
  margin-left: 0;
  padding: 10px 0;
  text-indent: 0;
  
  .flipped .front & { display: none; }

  li {
    margin: .4em 0;
    padding: 0 10px;
    
    &:first-child { margin-top: 0; }
    &:last-child { margin-bottom: 0; }

    [class^="icon-"],
    [class*=" icon-"] {
      color: @nav-icon-color;
      width: 1.75em;
    }
  }

  a {
    color: @nav-link-color;
    text-shadow: 0 1px 0 @grayDarker;
  
    &:hover {
      color: @nav-link-hover-color;

      i {
        color: @nav-icon-color;
      }
    }
  }

  .icon-large:before {
    font-size: 1.5em;
    vertical-align: -12%;
  }
}

